--- a/text.html
+++ b/text.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8" />
     <title>Александр Ермаков</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/player.css" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery.ui.min.js"></script>
+    <script src="./js/player.js"></script>
+    <script src="./js/jquery.popupWindow.js"></script>
   </head>
   <body class="inside text">
     <div id="page">
