static ajax pages added + menu links on index.html attrs updated

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <li><a href="alboum.html" data-body-required-class="inside alboum">Музыка</a><span></span><span></span></li>
           <li><a href="video.html" data-body-required-class="inside video">Видео</a><span></span><span></span></li>
           <li><a href="photo.html" data-body-required-class="inside photo">Фото</a><span></span><span></span></li>
-          <li><a href="text.html">Авторы</a><span></span><span></span></li>
-          <li><a href="billboard.html">Афиша</a><span></span><span></span></li>
-          <li><a href="guest.html">Гостевая</a><span></span><span></span></li>
+          <li><a href="text.html" data-body-required-class="inside text">Авторы</a><span></span><span></span></li>
+          <li><a href="billboard.html" data-body-required-class="inside billboard">Афиша</a><span></span><span></span></li>
+          <li><a href="guest.html" data-body-required-class="inside gueatbook">Гостевая</a><span></span><span></span></li>
         </ul>
       </div>
 
