audio files source changed

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="content">
                 <div class="items">
 
-                  <a href="#" data-source="http://78.47.220.210/paul.*" class="item active">
+                  <a href="#" data-source="/paul.*" class="item active">
                     <span class="number">01</span>
                     <span class="title">Paul McCartney</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
@@ -229,7 +229,7 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="http://78.47.220.210/akvarium.*" class="item">
+                  <a href="#" data-source="/akvarium.*" class="item">
                     <span class="number">02</span>
                     <span class="title">Аквариум</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
@@ -240,7 +240,7 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="http://78.47.220.210/pushnoy.*" class="item">
+                  <a href="#" data-source="/pushnoy.*" class="item">
                     <span class="number">03</span>
                     <span class="title">Александр Пушной</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
@@ -251,7 +251,7 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="http://78.47.220.210/paul.*" class="item played">
+                  <a href="#" data-source="/paul.*" class="item played">
                     <span class="number">04</span>
                     <span class="title">Paul McCartney</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
@@ -262,7 +262,7 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="http://78.47.220.210/akvariumю.*" class="item">
+                  <a href="#" data-source="/akvariumю.*" class="item">
                     <span class="number">05</span>
                     <span class="title">Аквариум</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
@@ -273,7 +273,7 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="http://78.47.220.210/pushnoy.*" class="item">
+                  <a href="#" data-source="/pushnoy.*" class="item">
                     <span class="number">06</span>
                     <span class="title">Александр Пушной</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
