some original tacks added

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
               <div class="content">
                 <div class="items">
 
-                  <a href="#" data-source="/paul.*" class="item active">
+                  <a href="#" data-source="/audio/01_ti_odna.*" class="item active">
                     <span class="number">01</span>
-                    <span class="title">Paul McCartney</span>
+                    <span class="title">Ты одна</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
@@ -229,9 +229,9 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="/akvarium.*" class="item">
+                  <a href="#" data-source="/audio/02_romans.*" class="item">
                     <span class="number">02</span>
-                    <span class="title">Аквариум</span>
+                    <span class="title">Романс</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
@@ -240,9 +240,9 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="/pushnoy.*" class="item">
+                  <a href="#" data-source="/audio/03_ostrov_phantasiy.*" class="item">
                     <span class="number">03</span>
-                    <span class="title">Александр Пушной</span>
+                    <span class="title">Остров фантазий</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
@@ -251,9 +251,9 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="/paul.*" class="item played">
+                  <a href="#" data-source="/audio/04_khristos.*" class="item played">
                     <span class="number">04</span>
-                    <span class="title">Paul McCartney</span>
+                    <span class="title">Христос</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
@@ -262,9 +262,9 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="/akvariumю.*" class="item">
+                  <a href="#" data-source="/audio/05_svet_ne_venchalniy.*" class="item">
                     <span class="number">05</span>
-                    <span class="title">Аквариум</span>
+                    <span class="title">Свет не венчальный</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
@@ -273,9 +273,9 @@
                     </span>
                   </a>
 
-                  <a href="#" data-source="/pushnoy.*" class="item">
+                  <a href="#" data-source="/audio/06_ya_lublu_tebya.*" class="item">
                     <span class="number">06</span>
-                    <span class="title">Александр Пушной</span>
+                    <span class="title">Я люблю тебя</span>
                     <span class="alboum">Альбом: <span>Откровение</span></span>
                     <span class="time">
                       <span class="current">00:00</span>
